# pf

./: .gitignore  README.md  a.out  cenas.txt  coisas.sh  coisas.txt  ep1.cmi  ep1.cmo  ep1.cmx  ep1.ml  ep1.txt  freq.cmi  freq.cmo  freq.ml  freq2.ml  freq3.ml  oUnit-testes.cache  test
f1/: a.out  ex1.cmi  ex1.cmx  ex1.ml  ex2.cmi  ex2.cmx  ex2.ml  ex4.cmi  ex4.cmx  ex4.ml  ex5.cmi  ex5.cmx  ex5.ml  ex6.cmi  ex6.cmx  ex6.ml  main
f10/: main.ml
f2/: a.out  fact.cmi  fact.cmx  fact.ml  fibfast.cmi  fibfast.cmx  fibfast.ml  somatorio.cmi  somatorio.cmx  somatorio.ml
f3/: 1.cmi  1.cmx  1.ml  a.out
f4/: a.ml
f5/: ex.ml
f6/: ex.ml
f7/: ex.ml
f8/: a.out  main.cmi  main.ml
f8/lab8/: dune-project
f8/lab8/_build/: .db  .digest-db  log
f8/lab8/_build/default/lib/: lab8.cmxa
f8/lab8/_build/default/lib/.lab8.objs/byte/: lab8.cmi  lab8.cmo  lab8.cmt
f8/lab8/_build/default/lib/.lab8.objs/native/: lab8.cmx
f8/lab8/_build/default/lib/.merlin-conf/: lib-lab8
f8/lab8/lib/: dune
f8/lab8/test/: dune
f9/: a.out  main.cmi  main.ml
f9/lab/: dune-project
f9/lab/_build/: .db  .digest-db  log
f9/lab/_build/default/.dune/: configurator  configurator.v2
f9/lab/_build/default/lib/: lab.cmxa
f9/lab/lib/: dune
lab2/: .devcontainer.json  dune  dune-project
lab2/_build/: .db  .digest-db  log
lab2/_build/default/: lab2.ml
lab2/_build/default/.lab2.eobjs/byte/: dune__exe__Lab2.cmi  dune__exe__Lab2.cmti
lab2/_build/default/.lab2.eobjs/native/: dune__exe__Lab2.cmx
lab2/_build/default/.merlin-conf/: exe-lab2
lab2/test/: dune
(+5 files in other folders)
