(rule
  (with-outputs-to test01.out
  (with-accepted-exit-codes 0
    (run bash -c "cat %{dep:test01.in} | %{exe:../lab1.exe}")
)))

(rule
  (alias runtest)
  (action (diff test01.exp test01.out))
)

(rule
  (with-outputs-to test02.out
  (with-accepted-exit-codes 0
    (run bash -c "cat %{dep:test02.in} | %{exe:../lab1.exe}")
)))

(rule
  (alias runtest)
  (action (diff test02.exp test02.out))
)

